refactor: 移除冗余类和更新服务实现，增强代码一致性和可维护性
- 删除 IdempotentSubmitAspect 类，整合相关功能至新的框架中。
- 更新 RagIntentResolver，简化构造函数并增强异常处理逻辑。
- 标记 CompositeKnowledgeRetriever 和 ConfidenceThresholdPostProcessor 为过时，准备未来重构。
- 删除 DeduplicatePostProcessor 类，更新相关引用为 DeduplicationPostProcessor。
- 更新 ConversationMessageServiceImpl 和 ConversationServiceImpl，改用 ClientException 处理错误，提升代码一致性。